<resources>
    <string name="app_name">Football Squares</string>
    <string name="facebook_app_id">1228412957223237</string>
    <string name="ADMOB_APP_ID">ca-app-pub-1761468736156699~2270259675</string>
    <string name="ADMOB_BANNER_UNIT_ID">ca-app-pub-1761468736156699/1458069982</string>
    <string name="ADMOB_FIRST_USE_ID">ca-app-pub-1761468736156699/5482271983</string>
<!--    ca-app-pub-3940256099942544/6300978111 Test ID-->
<!--    ca-app-pub-1761468736156699/1458069982 YOUR ID-->

    <!-- Loading screen -->
    <string name="loading_email">Sign in with Email</string>
    <string name="loading_facebook">Sign in with Facebook</string>
    <string name="loading_register">No account? CREATE ONE</string>
    <string name="loading_code_desc">Enter the code you were given to add them to your Friends List.</string>

    <!-- Register screen -->
    <string name="register_name">NAME</string>
    <string name="register_email">EMAIL</string>
    <string name="register_password">PASSWORD</string>
    <string name="register_repeat_password">PASSWORD (AGAIN)</string>
    <string name="register_submit">Create an Account</string>

    <!-- Login screen -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Sign in</string>

    <!-- Games screen -->
    <string name="games_title">My Games</string>
    <string name="games_title_empty">No active games found</string>
    <string name="games_host">Host a Game</string>
    <string name="games_join">Join a Game</string>
    <string name="games_score">%1$d squares - %2$d/100</string>

    <!-- Settings screen -->
    <string name="settings_title">Settings</string>
    <string name="settings_support">Support</string>
    <string name="settings_rate">Rate This App</string>
    <string name="settings_about">About</string>

    <!-- Friends screen -->
    <string name="friends_pending_title">Pending Friends</string>
    <string name="friends_title">Friends</string>
    <string name="friends_social_title">Social Media Friends</string>

    <!-- Host a game screen -->
    <string name="host_create">Create a Game</string>
    <string name="host_default_square_price">1</string>
    <string name="host_default_square_limit">100</string>
    <string name="host_game_info_title">Game Information</string>
    <string name="host_game_options">Options</string>

    <!-- Join a game screen -->
    <string name="join_btn">Join</string>
    <string name="join_disabled_btn">Play</string>
    <string name="join_author_txt">Created by @%1$s</string>
    <string name="join_found_title">Games found</string>
    <string name="join_id_title">Search by Game ID</string>
    <string name="join_location_title">Searching near your location…</string>
    <string name="join_location_empty">No games were found around you</string>

    <!-- Settings screen -->
    <string name="settings_log_out">Log Out</string>
    <string name="settings_about_desc">Contender - Football Squares is an app that allows you to bet on sports
        events such as football games. Football Squares is a game played while watching Football
        games. To read how it is played, go to this link: http://www.footballsquares.net/pages/help.
    </string>
    <string name="settings_about_copyright">www.MoyerSoftware.com
    </string>
    <string name="games_how_to">How to Play\nSquares</string>
    <string name="about_version">1.0.16</string>
    <string name="settings_how_to">How to Play Football Squares</string>
    <string name="settings_how_to_use">How to Use Contender</string>
    <string name="username_hint">Enter your username</string>
    <string name="about_company1">Copyright © 2021</string>
    <string name="about_company2">moyer</string>
    <string name="about_company3">software</string>
    <string name="about_company4">LLC</string>

    <!-- How to Play screen -->
    <string name="title_activity_how_to_play">How to Play Football Squares</string>
    <string name="skip">Skip</string>
    <string name="settings_about_affiliation">This app is not affiliated with or endorsed by the National Football League. Any trademarks used in the app are done so under \"fair use\" with the sole purpose of identifying the respective entities, and remain the property of their respective owners.</string>
    <string name="login_email_hint">EMAIL</string>
    <string name="login_password_hint">PASSWORD</string>
    <string name="login_forgot_password">FORGOT PASSWORD?</string>
    <string name="login_register">REGISTER</string>
    <string name="go_back">Go back</string>
    <string name="register_login">Already have an account? SIGN IN</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_desc">Contender - Football Squares is your go-to place to play Football Squares! Now Squares doesn\'t have to only be during the Big Game!</string>
    <string name="games_how_to_use">How to use</string>
    <string name="title_activity_how_to_use">How to use</string>
    <string name="edit_username">Edit username</string>
    <string name="games_nearby">Games nearby</string>
    <string name="or">or</string>
    <string name="custom_game_board">Custom game board</string>
    <string name="copy_id">Copy ID</string>
    <string name="find_friends">Find friends</string>
    <string name="find_friends_desc">Add people to your friends list that already have Contender</string>
    <string name="btn_continue">Continue</string>
    <string name="loading">Loading…</string>
    <string name="no_friends_found">No friends found.</string>
    <string name="reset_password">Reset password</string>

    <!-- Home screen -->
    <string name="app_title1">FOOTBALL SQUARES</string>
    <string name="app_title2">CONTENDER</string>
    <string name="player_details">Select a Player</string>
    <string name="list_of_players">List of Players</string>
    <string name="create_pdf">Create PDF</string>
    <string name="game_information">Game Information</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="add_players">Add Players</string>
    <string name="paid_players">Players Who Paid</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="quarter_final">FINAL</string>
    <string name="q4">Q4</string>
    <string name="regular_style">Regular Style</string>
    <string name="the_players">The Players</string>
    <string name="score">Score</string>
    <string name="game_id">Game ID:</string>
    <string name="purchase_failed">Purchase failed</string>
    <string name="channel_name">Contender</string>
    <string name="channel_description">Contender notifications</string>

    <!-- Game Info Screen -->
    <string name="info_invite">INVITE FRIENDS</string>
    <string name="info_created">Created By:</string>
    <string name="info_id">Game ID:</string>
    <string name="info_gamerules">GAME RULES</string>
    <string name="info_players">PLAYERS</string>
    <string name="info_winners">WINNER\'S ROW</string>
    <string name="rules_default"><![CDATA[There is a winner at the end of each quarter & the final score. Winners are based on the last digit of the score of each team.]]></string>
</resources>
