<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/player_details"
        android:orderInCategory="100"
        android:title="@string/player_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/list_players"
        android:orderInCategory="100"
        android:title="@string/list_of_players"
        app:showAsAction="never" />
    <item
        android:id="@+id/paid_players"
        android:orderInCategory="100"
        android:title="@string/paid_players"
        app:showAsAction="never" />
    <item
        android:id="@+id/create_pdf"
        android:orderInCategory="100"
        android:title="@string/create_pdf"
        app:showAsAction="never" />
    <item
        android:id="@+id/game_information"
        android:orderInCategory="100"
        android:title="@string/game_information"
        app:showAsAction="never" />
</menu>