<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoadingActivity"
    tools:ignore="MissingPrefix">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/loading_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:src="@drawable/logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/register_name_edit_txt"
                    style="@style/EditText.Light"
                    fontPath="fonts/segoe_ui.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/register_email_edit_txt"
                    style="@style/EditText.Light"
                    fontPath="fonts/segoe_ui.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/register_password_edit_txt"
                    style="@style/EditText.Light"
                    fontPath="fonts/segoe_ui.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/register_repeat_password_edit_txt"
                    style="@style/EditText.Light"
                    fontPath="fonts/segoe_ui.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_repeat_password"
                    android:inputType="textPassword" />
            </LinearLayout>
        </ScrollView>

        <Button
            fontPath="fonts/segoe_ui_bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRegisterButtonClicked"
            android:layout_marginBottom="16dp"
            android:text="@string/register_submit"
            android:theme="@style/Button" />
    </LinearLayout>
</FrameLayout>
