<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingPrefix"
        tools:targetApi="lollipop">

        <TextView
            fontPath="fonts/segoe_ui_medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/join_id_title"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/join_id_edit_txt"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="-8dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/join_id_title_txt"
            fontPath="fonts/segoe_ui_medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/join_found_title"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/join_id_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_light"
            android:elevation="2dp" />

        <TextView
            android:id="@+id/join_location_search_txt"
            fontPath="fonts/segoe_ui_medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/join_location_title"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/join_location_title_txt"
            fontPath="fonts/segoe_ui_medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/games_nearby"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/join_location_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_light"
            android:elevation="2dp" />
    </LinearLayout>
</ScrollView>