<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoadingActivity"
    tools:ignore="MissingPrefix">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/loading_bg" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/segoe_ui_medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/find_friends"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <TextView
                fontPath="fonts/segoe_ui.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:text="@string/find_friends_desc"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/find_friends_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never" />

                <TextView
                    android:id="@+id/find_friends_progress_txt"
                    fontPath="fonts/segoe_ui_medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </FrameLayout>

            <Button
                android:id="@+id/find_friends_skip_btn"
                fontPath="fonts/segoe_ui_bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="onSkipButtonClicked"
                android:text="@string/skip"
                android:theme="@style/Button.Host" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
