<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.moyersoftware.contender.menu.MainActivity"
    tools:ignore="MissingPrefix"
    tools:targetApi="lollipop">

    <TextView
        android:fontFamily="@font/montserrat"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/app_title1"
        android:textColor="@color/color_green"
        android:textSize="24sp"
        android:elevation="4dp"/>

    <TextView
        android:id="@+id/textView4"
        android:fontFamily="@font/montserrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray"
        android:elevation="4dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/app_title2"
        android:textColor="@color/color_lightgray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_gray"
        android:elevation="4dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:onClick="onBackButtonClicked"
            android:src="@drawable/back" />

        <TextView
            android:fontFamily="@font/didact_gothic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/games_join"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/join_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
